[project]
name = "minibone"
version = "0.0.1"
description = "Small boiler plate with tools for multithreading"
authors = [
    {name = "Erick Romero", email = "erick@gjrlabs.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GNU AFFERO GENERAL PUBLIC LICENSE",
    "Operating System :: Os Independent",
]
requires-python = ">=3.7"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/erromu/minibone/"
"Bug Tracker" = "https://github.com/erromu/minibone/issues"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 120

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501"]
