# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/ 
# https://packaging.python.org/en/latest/specifications/core-metadata/ 

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "minibone"
version = "0.9.2"
description = "Small boilerplate with tools for concurrent/parallel processing."
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICENSE*"]
keywords = ["multithreading", "asyncio", "task", "job", "background", "concurrent", "parallel"]
authors = [
    {name = "Erick Romero", email = "erick@gjrlabs.com"}
]



# https://pypi.org/classifiers/ 
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries",
]


dependencies = [
    "aiofiles>=25.1.0",
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
    "tomlkit>=0.14.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "ruff>=0.15",
]



[project.urls]
"Homepage" = "https://github.com/erromu/minibone/"
"Bug Tracker" = "https://github.com/erromu/minibone/issues"
"Issues" = "https://github.com/erromu/minibone/issues"
"Documentation" = "https://www.gjrlabs.com"
"Repository" = "https://github.com/erromu/minibone.git"
#"Changelog" = ""


#####################################################
# 1. setuptools editable install + import root
#####################################################
[tool.setuptools.packages.find]
where = ["src"]
include = ["minibone"]


#####################################################
# 2. Ruff (linter + formatter + isort)
#####################################################
[tool.ruff]
target-version = "py310"
line-length    = 120
extend-include = ["*.pyi"]

[tool.ruff.lint]
select = [
    "ARG",  # Unused function arguments
    "B",    # Bugbear (likely bugs and design issues)
    "E",    # Pycodestyle errors (PEP 8 style violations)
    "F",    # Pyflakes (logical errors, unused imports/variables)
    "I",    # Import sorting (isort)
    "N",    # pep8-naming (naming conventions)
    #"PTH",  # Pathlib usage (prefer pathlib over os.path)
    "PL",   # Pylint (various code quality checks)
    "SIM",  # Code simplification suggestions
    "TCH",  # Type checking (type annotation issues)
    "UP",   # pyupgrade (outdated syntax, suggest modern Python)
    "W",    # Pycodestyle warnings (less severe than E)
]
ignore = [
    "E203",     # Whitespace before ':' (conflicts with Black formatter)
    "E501",     # let the formatter handle line length
    "PLR0913",  # Too many arguments in function definition
]

[tool.ruff.lint.isort]
known-first-party      = ["src"]        # treat anything under src/ as first-party
known-third-party      = ["fastapi", "pydantic", "sqlalchemy"]  # optional: silence guessing
default-section        = "third-party"  # fallback for anything unmatched

# --- layout tweaks ---
lines-after-imports    = 2              # one blank line after the last import
lines-between-types    = 0              # no extra blank line between 'import x' and 'from x import y'

# --- ordering rules ---
order-by-type          = true           # CONST, Class, var (default)
case-sensitive         = false          # case-insensitive alphabetical (default)

# --- force special cases ---
force-to-top           = ["__future__"] # keep future imports at the very top
combine-as-imports     = false          # uncomment if you want separate lines for `from x import y as z`
force-single-line      = true           # Enforces one import per line

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false


